--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,5 +20,9 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0'
-      - run: dotnet build 
-      - run: dotnet test
+      - name: Build 
+        run: dotnet build
+        working-directory: src/GraphCompression 
+      - name: Test
+        run: dotnet test
+        working-directory: src/GraphCompression 
